[gd_scene load_steps=6 format=3 uid="uid://djqse2gmeqjnq"]

[ext_resource type="Script" path="res://src/play_ball.gd" id="1_hvvun"]
[ext_resource type="Texture2D" uid="uid://6p4k3sgjmrkc" path="res://assets/stadiumpixel.png" id="2_aobu0"]
[ext_resource type="PackedScene" uid="uid://ds23careiux1c" path="res://src/strikezone/zone.tscn" id="3_xxn3o"]
[ext_resource type="PackedScene" uid="uid://cl6l7iv1huj7p" path="res://src/cursors/crosshair.tscn" id="4_ryymv"]
[ext_resource type="PackedScene" uid="uid://d1tjdm2x8xsnh" path="res://src/cursors/batter_circle.tscn" id="5_xdh6u"]

[node name="PlayBall" type="Node2D"]
script = ExtResource("1_hvvun")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.4)
size_flags_horizontal = 4
texture = ExtResource("2_aobu0")

[node name="CenterMarker" type="Marker2D" parent="."]
position = Vector2(640, 470)
gizmo_extents = 32.0

[node name="PitcherCursor" parent="." instance=ExtResource("4_ryymv")]
unique_name_in_owner = true
position = Vector2(644, 468)

[node name="StrikeZone" parent="." instance=ExtResource("3_xxn3o")]
unique_name_in_owner = true
position = Vector2(643, 481)

[node name="BatterCircle" parent="." instance=ExtResource("5_xdh6u")]
unique_name_in_owner = true
position = Vector2(300, 445)
